--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -73,7 +73,7 @@ jobs:
           sed -i 's/nas/services/g' feeds/luci/applications/luci-app-ksmbd/luasrc/controller/cifsd.lua
           sed -i 's/nas/services/g' feeds/luci/applications/luci-app-qbittorrent/luasrc/controller/qbittorrent.lua
           sed -i 's/nas/services/g' feeds/luci/applications/luci-app-qbittorrent/luasrc/view/qbittorrent_status.htm
-          sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/luasrc/controller/terminal.lua
+          sed -i 's/10/65/g' feeds/luci/applications/luci-app-ttyd/luasrc/controller/terminal.lua
 
       - name: 删除部分packages文件
         run: |
