--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -53,12 +53,12 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-24.10 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
+          git clone -b openwrt-23.05 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
       - name: 修改部分submodule
         run: |
-          sed -i '$a src-git homeproxy https://github.com/immortalwrt/homeproxy.git' feeds.conf.default
+          sed -i '$a src-git homeproxy .git' feeds.conf.default
 
       - name: 修改部分patch文件
         run: |
@@ -94,6 +94,7 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/symonlee/openwrt-smartdns xipk
+          git clone https://github.com/immortalwrt/homeproxy
 
       - name: 载入自定义配置
         run: |
