--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -56,10 +56,6 @@ jobs:
           git clone -b openwrt-24.10 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
-      - name: 修改部分submodule
-        run: |
-          sed -i '$a src-git homeproxy .git' feeds.conf.default
-
       - name: 修改部分patch文件
         run: |
           sed -i '29s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
@@ -94,7 +90,7 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/symonlee/openwrt-smartdns xipk
-          git clone https://github.com/immortalwrt/homeproxy
+          git clone https://github.com/immortalwrt/homeproxy luci-app-homeproxy
 
       - name: 载入自定义配置
         run: |
