--- a/.github/workflows/imm24pw.yml
+++ b/.github/workflows/imm24pw.yml
@@ -164,6 +164,7 @@ jobs:
           CONFIG_PACKAGE_xtables-nft=y
 
           # 文件系统支持:
+          # CONFIG_USE_APK is not set
           CONFIG_PACKAGE_block-mount=y
           CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
