--- a/.github/workflows/coollede.yml
+++ b/.github/workflows/coollede.yml
@@ -10,7 +10,7 @@
 # <https://github.com/LemoFire/autoOpenWrt>
 #
 
-name: officialpw
+name: coolssr+
 
 on:
   push:
@@ -53,14 +53,20 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-24.10 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
+          git clone https://github.com/coolsnowwolf/lede openwrt
           mv ./openwrt/* ./
 
-      - name: 修改部分patch文件
+      - name: 修改部分submodule
         run: |
-          sed -i '29s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
-          sed -i '30s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
-          sed -i '31s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
+          sed -i '48a\
+          echo '\''iptables -t nat -A PREROUTING -p udp --dport 53 -j REDIRECT --to-ports 53'\'' >> /etc/firewall.user\
+          echo '\''iptables -t nat -A PREROUTING -p tcp --dport 53 -j REDIRECT --to-ports 53'\'' >> /etc/firewall.user\
+          \
+          echo '\''[ -n "$(command -v ip6tables)" ] && ip6tables -t nat -A PREROUTING -p udp --dport 53 -j REDIRECT --to-ports 53'\'' >> /etc/firewall.user\
+          echo '\''[ -n "$(command -v ip6tables)" ] && ip6tables -t nat -A PREROUTING -p tcp --dport 53 -j REDIRECT --to-ports 53'\'' >> /etc/firewall.user
+          ' package/lean/default-settings/files/zzz-default-settings
+          sed -i '2s/#src/src/g' feeds.conf.default
+          sed -i '3s/src/#src/g' feeds.conf.default
 
       - name: 更新feeds源
         run: |
@@ -68,17 +74,45 @@ jobs:
 
       - name: 调整插件位置
         run: |
-          sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/root/usr/share/luci/menu.d/luci-app-ttyd.json
-
-      - name: 删除部分luci文件
-        run: |
-          pushd feeds/luci/applications
-          rm -rf luci-app-homeproxy
+          sed -i 's/system/services/g' feeds/luci/applications/luci-app-filetransfer/luasrc/controller/filetransfer.lua
+          sed -i '10d' feeds/luci/applications/luci-app-ksmbd/luasrc/controller/cifsd.lua
+          sed -i 's/nas/services/g' feeds/luci/applications/luci-app-ksmbd/luasrc/controller/cifsd.lua
+          sed -i 's/nas/services/g' feeds/luci/applications/luci-app-qbittorrent/luasrc/controller/qbittorrent.lua
+          sed -i 's/nas/services/g' feeds/luci/applications/luci-app-qbittorrent/luasrc/view/qbittorrent_status.htm
+          sed -i 's/10/65/g' feeds/luci/applications/luci-app-ttyd/luasrc/controller/terminal.lua
 
       - name: 删除部分packages文件
         run: |
           pushd feeds/packages/net
           rm -rf adguardhome
+          rm -rf brook
+          rm -rf chinadns-ng
+          rm -rf dns2socks
+          rm -rf dns2tcp
+          rm -rf dnsproxy
+          rm -rf geoview
+          rm -rf hysteria
+          rm -rf ipt2socks
+          rm -rf microsocks
+          rm -rf mosdns
+          rm -rf naiveproxy
+          rm -rf pdnsd-alt
+          rm -rf shadowsocks-rust
+          rm -rf shadowsocksr-libev
+          rm -rf simple-obfs
+          rm -rf sing-box
+          rm -rf smartdns
+          rm -rf ssocks
+          rm -rf tcping
+          rm -rf trojan
+          rm -rf trojan-go
+          rm -rf trojan-plus
+          rm -rf tuic-client
+          rm -rf v2ray-core
+          rm -rf v2ray-geodata
+          rm -rf v2ray-plugin
+          rm -rf xray-core
+          rm -rf xray-plugin
 
       - name: 安装feeds源
         run: |
@@ -89,8 +123,13 @@ jobs:
           cd package
           mkdir openwrt-packages
           cd openwrt-packages
+          git clone https://github.com/fw876/helloworld
+          sed -i '/$ipt -A SS_SPEC_TPROXY -p udp --dport 80 -j DROP/i \		$ipt -A SS_SPEC_TPROXY -p udp --dport 443 -j DROP' helloworld/luci-app-ssr-plus/root/usr/bin/ssr-rules
           git clone https://github.com/symonlee/openwrt-smartdns xipk
-          git clone https://github.com/immortalwrt/homeproxy
+          pushd xipk
+          rm -rf qBittorrent-static
+          rm -rf qBittorrent
+          popd
 
       - name: 载入自定义配置
         run: |
@@ -112,7 +151,7 @@ jobs:
           # DNSMASQ-FULL支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
-          CONFIG_PACKAGE_ip-full=y
+          CONFIG_PACKAGE_dnsmasq_full_ipset=y
           # CONFIG_PACKAGE_ipv6helper is not set
           CONFIG_PACKAGE_odhcp6c=y
           CONFIG_PACKAGE_odhcpd-ipv6only=y
@@ -131,22 +170,39 @@ jobs:
           CONFIG_PACKAGE_kmod-usb2-pci=y
           CONFIG_PACKAGE_kmod-usb3=y
 
-          # 系统中文支持:
-          CONFIG_PACKAGE_default-settings-chn=y
-
           # 常用LuCI插件选择:
-          # CONFIG_PACKAGE_luci-app-cpufreq is not set
+          # CONFIG_PACKAGE_luci-app-accesscontrol is not set
+          # CONFIG_PACKAGE_luci-app-arpbind is not set
+          # CONFIG_PACKAGE_luci-app-autoreboot is not set
+          # CONFIG_PACKAGE_cpufreq is not set
+          # CONFIG_PACKAGE_luci-app-ddns is not set
+          CONFIG_PACKAGE_luci-app-filetransfer=y
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-ksmbd=y
-          CONFIG_PACKAGE_luci-app-package-manager=y
+          # CONFIG_PACKAGE_luci-app-nlbwmon is not set
           CONFIG_PACKAGE_luci-app-qbittorrent=y
-          CONFIG_PACKAGE_luci-app-homeproxy=y
+          # CONFIG_PACKAGE_luci-app-qbittorrent_static is not set
+          CONFIG_PACKAGE_luci-app-qbittorrent_dynamic=y
+          CONFIG_PACKAGE_luci-app-ssr-plus=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Client=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS is not set
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
           CONFIG_PACKAGE_luci-app-ttyd=y
+          # CONFIG_PACKAGE_luci-app-turboacc is not set
+          # CONFIG_PACKAGE_luci-app-upnp is not set
+          # CONFIG_PACKAGE_luci-app-vlmcsd is not set
+          # CONFIG_PACKAGE_luci-app-vsftpd is not set
+          # CONFIG_PACKAGE_luci-app-wol is not set
 
           # 常用软件包:
           CONFIG_PACKAGE_adguardhome=y
+          CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
+          # CONFIG_PACKAGE_coremark is not set
           CONFIG_PACKAGE_unzip=y
           CONFIG_PACKAGE_bind-dig=y
           CONFIG_PACKAGE_ca-certificates=y
