--- a/.github/workflows/coollede.yml
+++ b/.github/workflows/coollede.yml
@@ -203,6 +203,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS is not set
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNSPROXY=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS is not set
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
@@ -214,6 +215,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-wol is not set
 
           # 常用软件包:
+          CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_adguardhome=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
