--- a/.github/workflows/coollede.yml
+++ b/.github/workflows/coollede.yml
@@ -210,6 +210,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Client=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS is not set
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNSPROXY=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS is not set
