--- a/.github/workflows/coollede.yml
+++ b/.github/workflows/coollede.yml
@@ -205,7 +205,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2SOCKS is not set
-          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2TCP is not set
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNS2TCP=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_DNSPROXY is not set
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS is not set
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
