--- a/.github/workflows/coollede.yml
+++ b/.github/workflows/coollede.yml
@@ -152,6 +152,7 @@ jobs:
           CONFIG_PACKAGE_odhcpd-ipv6only=y
 
           # 文件系统支持:
+          CONFIG_TESTING_KERNEL=y
           CONFIG_PACKAGE_block-mount=y
           CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
