--- a/.github/workflows/coollede.yml
+++ b/.github/workflows/coollede.yml
@@ -211,6 +211,7 @@ jobs:
           # 常用软件包:
           CONFIG_PACKAGE_adguardhome=y
           CONFIG_PACKAGE_autocore=y
+          CONFIG_PACKAGE_boost-system=y
           CONFIG_PACKAGE_btop=y
           CONFIG_PACKAGE_unzip=y
           CONFIG_PACKAGE_bind-dig=y
