--- a/.github/workflows/coollede.yml
+++ b/.github/workflows/coollede.yml
@@ -106,6 +106,11 @@ jobs:
           rm -rf xray-core
           rm -rf xray-plugin
 
+      - name: golang latest version
+        run: |
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/sbwml/packages_lang_golang -b 24.x feeds/packages/lang/golang
+
       - name: 安装feeds源
         run: |
           ./scripts/feeds install -a
