--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b master --single-branch https://github.com/immortalwrt/immortalwrt openwrt
+          git clone -b openwrt-24.10 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
       - name: 修改部分patch文件
@@ -70,6 +70,11 @@ jobs:
       - name: 调整插件位置&翻译优化
         run: |
           sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/root/usr/share/luci/menu.d/luci-app-ttyd.json
+
+      - name: 删除部分luci文件
+        run: |
+          pushd feeds/luci/applications
+          rm -rf luci-app-qbittorrent
 
       - name: 删除部分packages文件
         run: |
@@ -104,6 +109,11 @@ jobs:
           rm -rf xray-core
           rm -rf xray-plugin
 
+      - name: golang latest version
+        run: |
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/sbwml/packages_lang_golang -b 25.x feeds/packages/lang/golang
+
       - name: 安装feeds源
         run: |
           ./scripts/feeds install -a
@@ -135,6 +145,8 @@ jobs:
           rm -rf qBittorrent-static
           rm -rf qBittorrent
           rm -rf dnsproxy
+          popd
+          git clone https://github.com/sbwml/openwrt-qBittorrent
 
       - name: 载入自定义配置
         run: |
