Change git clone source and branch for helloworld

--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -133,7 +133,7 @@ jobs:
           cd package
           mkdir openwrt-packages
           cd openwrt-packages
-          git clone https://github.com/fw876/helloworld
+          git clone -b tuic --single-branch  https://github.com/zxlhhyccc/helloworld
           sed -i '16d' helloworld/luci-app-ssr-plus/Makefile
           sed -i 's/\+dns2tcp //g' helloworld/luci-app-ssr-plus/Makefile
           sed -i '64s/1/0/g' helloworld/luci-app-ssr-plus/luasrc/model/cbi/shadowsocksr/advanced.lua
