--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -86,10 +86,9 @@ jobs:
           sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/root/usr/share/luci/menu.d/luci-app-ttyd.json
           sed -i 's/nas/services/g' feeds/luci/applications/luci-app-samba4/root/usr/share/luci/menu.d/luci-app-samba4.json
 
-      - name: 删除部分luci文件
+      - name: 删除部分系统组件
         run: |
-          pushd feeds/luci/applications
-          rm -rf luci-app-attendedsysupgrade
+          sed -i 's/attendedsysupgrade/firewall/g' feeds/luci/collections/luci/Makefile
 
       - name: 删除部分packages文件
         run: |
@@ -123,11 +122,6 @@ jobs:
           rm -rf v2ray-plugin
           rm -rf xray-core
           rm -rf xray-plugin
-
-      - name: golang latest version
-        run: |
-          rm -rf feeds/packages/lang/golang
-          git clone https://github.com/sbwml/packages_lang_golang -b 25.x feeds/packages/lang/golang
 
       - name: 安装feeds源
         run: |
