--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -67,16 +67,24 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b main --single-branch https://github.com/openwrt/openwrt
+          git clone -b master --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
       - name: 修改部分patch文件
         run: |
+          sed -i '16,18d' package/emortal/default-settings/files/99-default-settings
           sed -i '3s/REJECT/ACCEPT/g' package/network/config/firewall/files/firewall.config
+          sed -i '6s/1/0/g' package/network/config/firewall/files/firewall.config
+          sed -i '7s/1/0/g' package/network/config/firewall/files/firewall.config
 
       - name: 更新feeds源
         run: |
           ./scripts/feeds update -a
+
+      - name: 调整插件位置&翻译优化
+        run: |
+          sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/root/usr/share/luci/menu.d/luci-app-ttyd.json
+          sed -i 's/nas/services/g' feeds/luci/applications/luci-app-samba4/root/usr/share/luci/menu.d/luci-app-samba4.json
 
       - name: 删除部分系统组件
         run: |
@@ -114,6 +122,11 @@ jobs:
           rm -rf v2ray-plugin
           rm -rf xray-core
           rm -rf xray-plugin
+
+      - name: golang latest version
+        run: |
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/sbwml/packages_lang_golang -b 25.x feeds/packages/lang/golang
 
       - name: 安装feeds源
         run: |
@@ -219,6 +232,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
           # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
+          CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
